Calculation is working

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,12 +5,12 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <!-- Dashboard Tab -->
+  <!-- Einheitenrechner -->
   <ion-tab title="Einheitenrechner" icon-off="ion-ios-calculator" icon-on="ion-ios-calculator" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-  <!-- Chats Tab -->
+  <!-- Währungsrechner -->
   <ion-tab title="Währungsrechner" icon-off="ion-cash" icon-on="ion-cash" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
