--- a/www/templates/tab-eRechner.html
+++ b/www/templates/tab-eRechner.html
@@ -3,10 +3,10 @@
 
     <div>
 
-    <label class="item item-input">
-      <span class="input-label">Eingabe</span>
-      <input type="number">
-    </label>
+      <label class="item item-input">
+        <span class="input-label" id="eingabe">Eingabe</span>
+        <input type="number" ng-model="model.eingabe">
+      </label>
 
     </div>
     <div class="list">
@@ -35,9 +35,20 @@
 
     </div>
 
-    <button class="button button-dark" onclick="calculate()">
-      Berechnen
-    </button>
+    <div>
+
+      <button class="button button-dark" ng-click="berechnen()">
+        Berechnen
+      </button>
+    </div>
+    <div>
+      <label class="item item-output">
+        <span class="output-label" id="ausgabe">Ausgabe</span>
+        <input type="number" ng-model="model.ausgabe">
+      </label>
+    </div>
+
+
 
   </ion-content>
 </ion-view>
