--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,40 @@
 /* Empty. Add your own CSS if you like */
+
+/* - - - - - - - - - - - TUTORIAL - - - - - - - - - - - */
+
+body {
+  cursor: url('http://ionicframework.com/img/finger.png'), auto;
+}
+
+.slider {
+  height: 100%;
+}
+
+.slider-slide {
+  padding-top: 80px;
+  color: #000;
+  background-color: #fff;
+  text-align: center;
+}
+
+#logo {
+  margin: 30px 0px;
+}
+
+#list {
+  width: 160px;
+  margin: auto;
+  padding-top: 50px font-size : 20 px;
+}
+
+#list ol li {
+  text-align: left;
+  list-style: decimal;
+  margin: auto;
+}
+
+.button.ng-hide {
+  display: none;
+}
+
+/* - - - - - - - - - - - TUTORIAL END - - - - - - - - - - - */
