--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,14 +6,18 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Einheitenrechner -->
-  <ion-tab title="Einheitenrechner" icon-off="ion-ios-calculator" icon-on="ion-ios-calculator" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Einheitenrechner" icon-off="ion-ios-calculator" icon-on="ion-ios-calculator" href="#/tab/units">
+    <ion-nav-view name="tab-units"></ion-nav-view>
   </ion-tab>
 
   <!-- Währungsrechner -->
-  <ion-tab title="Währungsrechner" icon-off="ion-cash" icon-on="ion-cash" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Währungsrechner" icon-off="ion-cash" icon-on="ion-cash" href="#/tab/currencies">
+    <ion-nav-view name="tab-currencies"></ion-nav-view>
   </ion-tab>
 
+  <!-- Tutorial -->
+  <ion-tab title="Tutorial" icon-off="ion-android-bulb" icon-on="ion-android-bulb" href="#/tab/tutorial">
+    <ion-nav-view name="tab-tutorial"></ion-nav-view>
+  </ion-tab>
 
 </ion-tabs>
