--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,21 +3,21 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <!-- Einheitenrechner -->
-  <ion-tab title="Einheitenrechner" icon-off="ion-ios-calculator" icon-on="ion-ios-calculator" href="#/tab/units">
-    <ion-nav-view name="tab-units"></ion-nav-view>
-  </ion-tab>
+<!-- Einheitenrechner -->
+<ion-tab title="Einheitenrechner" icon-off="ion-ios-calculator" icon-on="ion-ios-calculator" href="#/tab/units">
+  <ion-nav-view name="tab-units"></ion-nav-view>
+</ion-tab>
 
-  <!-- Währungsrechner -->
-  <ion-tab title="Währungsrechner" icon-off="ion-cash" icon-on="ion-cash" href="#/tab/currencies">
-    <ion-nav-view name="tab-currencies"></ion-nav-view>
-  </ion-tab>
+<!-- Währungsrechner -->
+<ion-tab title="Währungsrechner" icon-off="ion-cash" icon-on="ion-cash" href="#/tab/currencies">
+  <ion-nav-view name="tab-currencies"></ion-nav-view>
+</ion-tab>
 
-  <!-- Tutorial -->
-  <ion-tab title="Tutorial" icon-off="ion-android-bulb" icon-on="ion-android-bulb" href="#/tab/tutorial">
-    <ion-nav-view name="tab-tutorial"></ion-nav-view>
-  </ion-tab>
+<!-- Tutorial -->
+<ion-tab title="Tutorial" icon-off="ion-android-bulb" icon-on="ion-android-bulb" href="#/tab/tutorial">
+  <ion-nav-view name="tab-tutorial"></ion-nav-view>
+</ion-tab>
 
 </ion-tabs>
