--- a/www/templates/tab-eRechner.html
+++ b/www/templates/tab-eRechner.html
@@ -45,7 +45,7 @@
     <div class="list card">
       <label class="item item-output">
         <span class="output-label" id="ausgabe">Ausgabe</span>
-        <input type="number" ng-model="model.ausgabe">
+        <input type="number" ng-model="model.ausgabe" readonly>
       </label>
     </div>
 
